--- a/app.json
+++ b/app.json
@@ -2,6 +2,14 @@
   "pages": [
     "pages/index/index"
   ],
+  "window": {
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "Good Good Breakfast",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "light",
+    "enablePullDownRefresh": false
+  },
   "tabBar": {
     "color": "#696969",
     "selectedColor": "#000000",
