--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "Good Good Breakfast",
+    "navigationBarTitleText": "好好早饭，天天向上",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": false
