--- a/client/app.json
+++ b/client/app.json
@@ -8,7 +8,7 @@
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "好好早饭，天天向上",
+    "navigationBarTitleText": "天天早饭",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": false
