--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
 	"appid": "wx9cf940f9503da559",
-	"projectname": "%E5%A5%BD%E5%A5%BD%E6%97%A9%E9%A5%AD%EF%BC%8C%E5%A4%A9%E5%A4%A9%E5%90%91%E4%B8%8A",
+	"projectname": "好好早饭",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
