--- a/project.config.json
+++ b/project.config.json
@@ -11,13 +11,15 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.4.0",
+	"libVersion": "2.4.3",
 	"appid": "wx9cf940f9503da559",
 	"projectname": "好好早饭",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"isGameTourist": false,
+	"miniprogramRoot": "client/",
+	"cloudfunctionRoot": "cloud/",
 	"condition": {
 		"search": {
 			"current": -1,
@@ -27,15 +29,23 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "stat",
+					"pathName": "pages/stat/stat"
+				}
+			]
 		}
-	},
-  "miniprogramRoot": "./client/",
-  "cloudfunctionRoot": "./cloud/"
+	}
 }
