--- a/project.config.json
+++ b/project.config.json
@@ -38,12 +38,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "stat",
-					"pathName": "pages/stat/stat"
+					"pathName": "pages/stat/stat",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "explore",
+					"pathName": "pages/explore/explore"
 				}
 			]
 		}
